[metadata]
name = sheet
version = 0.0.4
url = https://github.com/thorwhalen/sheet
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Tools to manipulate ipython (jupyter) notebooks
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = sheet

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	lined
	grub
	py2store

